Fixed small layout issues on home and contact pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -473,6 +473,10 @@
     header.nav-open .nav-center {
       font-size: 1.2rem;
     }
+
+    .google-form-embed iframe {
+      height: 1250px;
+    }
   }
 
   /* Dark-mode tweak so the underline is visible on desktop too */
@@ -535,7 +539,7 @@
       <div class="contact-hero-content">
         <h1 class="contact-title">Contact Our Team!</h1>
         <p class="contact-subtitle">
-          Message us directly either on Discord, Reddit, or via Email. Feel free to contact us on any of the platforms below!
+          Message us directly on either Reddit or via Email. Feel free to contact us on any of the platforms below!
         </p>
       </div>
     </section>
