Small mobile changes

--- a/contact-us.html
+++ b/contact-us.html
@@ -444,6 +444,10 @@
       display: none; /* hide menu by default on small screens */
     }
 
+    .nav-left{
+      display: none;
+    }
+
     .nav-toggle {
       display: inline-flex;
       align-items: center;
@@ -475,7 +479,11 @@
     }
 
     .google-form-embed iframe {
-      height: 1250px;
+      height: 1275px;
+    }
+
+    footer {
+      font-size: 0.75rem;
     }
   }
 
@@ -593,7 +601,7 @@
 
     <!-- FOOTER -->
     <footer>
-      &copy; <span id="year"></span> WareHouseX360 – All Rights Reserved
+      &copy; <span id="year"></span> WareHouseX360 – Send-In Modding & Refurbishment Services
     </footer>
   </div>
 
