--- a/send-in.html
+++ b/send-in.html
@@ -457,6 +457,10 @@
       display: none; /* hide menu by default on small screens */
     }
 
+    .nav-left {
+      display: none;
+    }
+
     .nav-toggle {
       display: inline-flex;
       align-items: center;
@@ -485,6 +489,10 @@
     /* Optional: shrink nav text a bit on phones */
     header.nav-open .nav-center {
       font-size: 1.2rem;
+    }
+
+    footer {
+      font-size: 0.75rem;
     }
   }
 
