--- a/home.html
+++ b/home.html
@@ -689,10 +689,14 @@
 				display: none;
 			}
 
+			.nav-left {
+				display: none;
+			}
+
 			.nav-toggle {
 				display: inline-flex;
 				align-items: center;
-				justify-content: center;
+				justify-content: start;
 			}
 
 			header.nav-open .nav-center {
@@ -746,8 +750,8 @@
 
 			/* Use a single column so each image can take full width */
 			.why-gallery {
-				grid-template-columns: repeat(2, minmax(0, 1fr));
-				column-gap: 0.9rem;
+				grid-template-columns: 1fr;
+				column-gap: 0.5rem;
 				row-gap: 3.5rem;
 				position: center;
 			}
@@ -756,6 +760,15 @@
 				width: 100%;
 				aspect-ratio: 4 / 3;          /* keep the same shape */
 				object-fit: cover;            /* fill the box nicely */
+			}
+
+			.why-features-list {
+				font-size: 1.45rem;
+				gap: 0.9rem;
+			}
+
+			footer {
+				font-size: 0.75rem;
 			}
 		}
 
@@ -1123,6 +1136,7 @@
 			applyTheme(newTheme);
 		});
   	</script>
+	
 	<script>
 		// Mobile nav toggle
 		const navToggle = document.querySelector('.nav-toggle');
