Fixed overflow on home page (mobile)

--- a/home.html
+++ b/home.html
@@ -685,6 +685,9 @@
 
 		/* ------- Mobile layout ------- */
 		@media (max-width: 960px) {
+			body {
+				overflow-x: hidden;
+			}
 			.nav-center {
 				display: none;
 			}
