--- a/home.html
+++ b/home.html
@@ -24,6 +24,11 @@
 			transition: background 0.25s ease, color 0.25s ease;
 		}
 
+		html, body {
+  			max-width: 100%;
+  			overflow-x: hidden;
+		}
+
 		a {
 			text-decoration: none;
 			color: inherit;
@@ -703,7 +708,20 @@
 				width: 100%;
 				margin: 0 auto;
 			}
+			
+			.why-header-box {
+				flex-direction: column;        /* stack text over logo */
+				align-items: center;
+				justify-content: center;
+				text-align: center;
+				gap: 0.5rem;
+			}
 
+			.why-header-logo {
+				max-width: 120px;              /* shrink it a bit on small screens */
+				height: auto;
+				margin: 0;
+			}
 			.nav-center {
 				display: none;
 			}
