Fixed scrolling issue when lightbox open

--- a/home.html
+++ b/home.html
@@ -688,6 +688,11 @@
 			cursor: pointer;
 		}
 
+		.no-scroll {
+			overflow: hidden !important;
+  			height: 100vh;
+		}
+
 		/* ------- Mobile layout ------- */
 		@media (max-width: 960px) {
 			.why-section {
