--- a/home.html
+++ b/home.html
@@ -988,65 +988,106 @@
 
 		let currentIndex = -1;
 
+		// store scroll position for lock/unlock
+		let scrollPosition = 0;
+
 		function openModal(index) {
 			currentIndex = index;
 			const img = thumbs[currentIndex].querySelector('img');
-			modalImg.src = img.src;
-			modal.classList.add("open");
-			modal.setAttribute("aria-hidden", "false");
+			if (!img) return;
 
-			// Disable background scroll
-			document.body.classList.add("no-scroll");
+			modalImg.src = img.src;
+			modalImg.alt = img.alt || 'Board work image';
+			modal.classList.add('open');
+			modal.setAttribute('aria-hidden', 'false');
+
+			// 🔒 LOCK SCROLL (desktop + mobile)
+			scrollPosition = window.scrollY || window.pageYOffset || 0;
+
+			document.body.classList.add('no-scroll');
+			document.body.style.position = 'fixed';
+			document.body.style.top = `-${scrollPosition}px`;
+			document.body.style.left = '0';
+			document.body.style.right = '0';
+			document.body.style.width = '100%';
 		}
 
 		function closeModal() {
-			modal.classList.remove("open");
-			modal.setAttribute("aria-hidden", "true");
-			modalImg.src = "";
+			modal.classList.remove('open');
+			modal.setAttribute('aria-hidden', 'true');
+			modalImg.src = '';
 			currentIndex = -1;
-			document.body.classList.remove("no-scroll");
+
+			// 🔓 UNLOCK SCROLL
+			document.body.classList.remove('no-scroll');
+			document.body.style.position = '';
+			document.body.style.top = '';
+			document.body.style.left = '';
+			document.body.style.right = '';
+			document.body.style.width = '';
+
+			window.scrollTo(0, scrollPosition);
 		}
 
+		// click on thumbs → open
 		thumbs.forEach((btn, index) => {
-			btn.addEventListener("click", () => openModal(index));
+			btn.addEventListener('click', () => openModal(index));
 		});
 
-		closeBtn.addEventListener("click", closeModal);
+		// X button
+		if (closeBtn) {
+			closeBtn.addEventListener('click', closeModal);
+		}
 
-		modal.addEventListener("click", (e) => {
-			if (e.target === modal) closeModal();
+		// click backdrop
+		modal.addEventListener('click', (e) => {
+			if (e.target === modal) {
+			closeModal();
+			}
 		});
 
-		document.addEventListener("keydown", (e) => {
-			if (!modal.classList.contains("open")) return;
+		// keyboard: esc + arrows
+		document.addEventListener('keydown', (e) => {
+			if (!modal.classList.contains('open')) return;
 
-			if (e.key === "Escape") closeModal();
-			if (e.key === "ArrowRight") openModal((currentIndex + 1) % thumbs.length);
-			if (e.key === "ArrowLeft")
-			openModal((currentIndex - 1 + thumbs.length) % thumbs.length);
+			if (e.key === 'Escape') {
+			closeModal();
+			} else if (e.key === 'ArrowRight') {
+			const next = (currentIndex + 1) % thumbs.length;
+			openModal(next);
+			} else if (e.key === 'ArrowLeft') {
+			const prev = (currentIndex - 1 + thumbs.length) % thumbs.length;
+			openModal(prev);
+			}
 		});
 
-		/* Touch swipe navigation (mobile) */
+		// optional: swipe left/right on mobile
 		let startX = 0;
-		modal.addEventListener("touchstart", (e) => {
+		modal.addEventListener('touchstart', (e) => {
+			if (!modal.classList.contains('open')) return;
 			startX = e.touches[0].clientX;
 		});
 
-		modal.addEventListener("touchend", (e) => {
+		modal.addEventListener('touchend', (e) => {
+			if (!modal.classList.contains('open')) return;
 			const endX = e.changedTouches[0].clientX;
 			const diff = endX - startX;
 
-			// Swipe threshold
 			if (Math.abs(diff) > 50) {
 			if (diff < 0) {
-				openModal((currentIndex + 1) % thumbs.length); // swipe left → next
+				// swipe left → next
+				const next = (currentIndex + 1) % thumbs.length;
+				openModal(next);
 			} else {
-				openModal((currentIndex - 1 + thumbs.length) % thumbs.length); // swipe right → prev
+				// swipe right → prev
+				const prev = (currentIndex - 1 + thumbs.length) % thumbs.length;
+				openModal(prev);
 			}
 			}
 		});
 		})();
 	</script>
+
 
 
 	<script>
