Fixed Mobile Pre-Built.html page

--- a/home.html
+++ b/home.html
@@ -879,7 +879,7 @@
 					</p>
 
 					<div class="hero-buttons">
-						<a href="#prebuilt">
+						<a href="pre-built.html">
 							<button class="primary-btn">
 								<img src="assets/icons/Pre-Built_Icon.svg" alt="" class="btn-icon">
 								<span>Pre-Built Consoles</span>
