--- a/pre-built.html
+++ b/pre-built.html
@@ -308,13 +308,11 @@
 		}
 
 		.store-hero-overlay {
-			background: rgba(255,255,255,0.7);
-            transition: background 0.25s ease;
             position: absolute;
             inset: 0;
-			margin: 0 auto;
-			padding: 1.5rem 1rem 1.2rem;
-			text-align: center;
+            background: rgba(255, 255, 255, 0.7);
+            transition: background 0.25s ease;
+            text-align: center;
 		}
 
 		.store-hero-title {
