--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta http-equiv="refresh" content="0; url=home.html">
+
+  <link rel="icon" type="image/x-icon" href="assets/logo/website_logo.png">
 </head>
 <body></body>
 </html>
