Fixed favicon issue on all pages

--- a/pre-built.html
+++ b/pre-built.html
@@ -5,6 +5,8 @@
 	<title>Shop Pre-Built Consoles</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="icon" type="image/x-icon" href="assets/logo/website_logo.png">
+
 	<!-- Google Fonts (same as home.html) -->
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 
